WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74622
Rollout
r102825
because it didn't improve performance
https://bugs.webkit.org/show_bug.cgi?id=74622
Summary
Rollout r102825 because it didn't improve performance
Tony Chang
Reported
2011-12-15 10:18:35 PST
Rollout
r102825
because it didn't improve performance
Attachments
Patch
(2.77 KB, patch)
2011-12-15 10:19 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.81 KB, patch)
2011-12-15 15:51 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2011-12-15 10:19:06 PST
Created
attachment 119454
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-15 15:48:52 PST
Comment on
attachment 119454
[details]
Patch Rejecting
attachment 119454
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/10910483
Tony Chang
Comment 3
2011-12-15 15:51:02 PST
Created
attachment 119510
[details]
Patch for landing
WebKit Review Bot
Comment 4
2011-12-15 22:40:51 PST
Comment on
attachment 119510
[details]
Patch for landing Clearing flags on attachment: 119510 Committed
r103027
: <
http://trac.webkit.org/changeset/103027
>
WebKit Review Bot
Comment 5
2011-12-15 22:40:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug