Unreviewed, rollout r102825 because it didn't improve performance. https://bugs.webkit.org/show_bug.cgi?id=74622

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::styleForElement):
(WebCore::CSSStyleSelector::pseudoStyleForElement):


Canonical link: https://commits.webkit.org/91391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103027 268f45cc-cd09-0410-ab3c-d52691b4dbfc